pihole/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - containerPort: 80
        - containerPort: 53
          protocol: TCP
        - containerPort: 53
          protocol: UDP
        volumeMounts:
        - mountPath: /etc/pihole
          name: pihole-config
        - mountPath: /etc/dnsmasq.d
          name: dnsmasq-config
      volumes:
      - name: pihole-config
        emptyDir: {}
      - name: dnsmasq-config
        emptyDir: {}
