pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
  loadBalancerIP: 192.168.2.250
